# google-ctf-2022

./: .gitignore  pyproject.toml
appnote/: solution.py
treebox/: solution.py
weather/: Makefile  hack.c  solution.py
